--- a/src/public/events.html
+++ b/src/public/events.html
@@ -17,7 +17,7 @@
     <title>Inicio</title>
   </head>
   <body>
-    <header class="fixed-top"><a href="index.html"><img class="logoWolap" src="images/koala.png" alt="koala"/></a><a href="index.html">
+    <header class="fixed-top"><a href="../../../index.html"><img class="logoWolap" src="images/koala.png" alt="koala"/></a><a href="../../../index.html">
         <h1 class="logo">WOLAPP</h1></a>
       <ul><a class="menu-option" href="events.html">Eventos</a><a class="menu-option" href="#">Bolsa de trabajo</a><a class="menu-option" href="#">Agenda</a><a class="menu-option" href="#">Publicar</a></ul>
       <div>
