--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Inicio</title>
   </head>
   <body>
-    <header class="fixed-top"><a href="index.html"><img class="logoWolap" src="./src/public/images/koala.png" alt="koala"/></a><a href="index.html">
+    <header class="fixed-top"><a href="../../../index.html"><img class="logoWolap" src="./src/public/images/koala.png" alt="koala"/></a><a href="../../../index.htmlindex.html">
         <h1 class="logo">WOLAPP</h1></a>
       <ul><a class="menu-option" href="./src/public/events.html">Eventos</a><a class="menu-option" href="#">Bolsa de trabajo</a><a class="menu-option" href="#">Agenda</a><a class="menu-option" href="#">Publicar</a></ul>
       <div>
@@ -35,16 +35,22 @@
               <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
-              <div class="carousel-item active"><img class="d-block w-100" src="./src/public/images/events/lora-iota.jpg" alt="First slide"/></div>
+              <div class="carousel-item active"><img class="d-block w-100" src="./src/public/images/students.jpg" alt="First slide"/>
+                <div class="carousel-caption d-md-block" class="align-text-bottom">
+                  <h6>Pensando en ti,concentramos en una sola plataforma los eventos academicos que te ayudarán a crecer profesionalmente.</h6>
+                  <h6>A travez de nuestros eventos, adquiere las habilidades blandas que necesitas para ser un profesional competitivo en el mercado</h6>
+                </div>
+              </div>
               <div class="carousel-item"><img class="d-block w-100" src="./src/public/images/events/taller-marketing.jpg" alt="Second slide"/></div>
-              <div class="carousel-item"><img class="d-block w-100" src="./src/public/images/events/iot.jpg" alt="Third slide"/></div>
+              <div class="carousel-item"><img class="d-block w-100" src="./src/public/images/events/lora-iota.jpg" alt="Third slide"/></div>
+              <div class="carousel-item"><img class="d-block w-100" src="./src/public/images/events/space-up.jpg" alt="Fifth slide"/></div>
             </div><a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next"><span class="carousel-center-next-icon" aria-hidden="true"></span><span class="sr-only">Next</span></a>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-3">
           <div class="row"><img class="img-article" src="./src/public/images/events/Arduino-Day.jpg" alt="img1" data-toggle="modal" data-target="#exampleModal"/></div>
-          <div class="row"><img class="img-article" src="./src/public/images/events/design-thinking.jpg" alt="img1"/></div>
           <div class="row"><img class="img-article" src="./src/public/images/events/ideas-estudios-mercado.jpg" alt="img1"/></div>
+          <div class="row"><img class="img-article" src="./src/public/images/events/conegp.jpg" alt="img1"/></div>
         </div>
       </div>
     </div>
@@ -52,7 +58,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
+    <script src="./src/public/js/app.js"></script>
     <script async="async" defer="defer" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7OZ6lHBNCgOSu6pa8nJ3Jf2zR0-t_ilM&amp;callback=initMap"></script>
   </body>
 </html>
