responsive for mobile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Inicio</title>
   </head>
   <body>
-    <header class="fixed-top"><a href="../../../index.html"><img class="logoWolap" src="./src/public/images/koala.png" alt="koala"/></a><a href="../../../index.htmlindex.html">
+    <header class="fixed-top"><a href="index.html"><img class="logoWolap" src="./src/public/images/koala.png" alt="koala"/></a><a href="index.html">
         <h1 class="logo">WOLAPP</h1></a>
       <ul><a class="menu-option" href="./src/public/events.html">Eventos</a><a class="menu-option" href="#">Bolsa de trabajo</a><a class="menu-option" href="#">Agenda</a><a class="menu-option" href="#">Publicar</a></ul>
       <div>
@@ -36,7 +36,7 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active"><img class="d-block w-100" src="./src/public/images/students.jpg" alt="First slide"/>
-                <div class="carousel-caption d-md-block" class="align-text-bottom">
+                <div class="carousel-caption d-md-block" class="">
                   <h6>Pensando en ti,concentramos en una sola plataforma los eventos academicos que te ayudarán a crecer profesionalmente.</h6>
                   <h6>A travez de nuestros eventos, adquiere las habilidades blandas que necesitas para ser un profesional competitivo en el mercado</h6>
                 </div>
