carrusel correction styles

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <input class="search" type="text" placeholder="Buscar..."/><a href="#"><i class="material-icons">account_circle</i></a>
       </div>
     </header>
-    <ul class="menu-options fixed-top nav-options"><a class="menu-option" href="events.html">Eventos</a><a class="menu-option" href="#">Bolsa de trabajo</a><a class="menu-option" href="#">Agenda</a><a class="menu-option" href="#">Publica</a></ul>
+    <ul class="menu-options fixed-top nav-options"><a class="menu-option" href="./src/public/events.html">Eventos</a><a class="menu-option" href="#">Bolsa de trabajo</a><a class="menu-option" href="#">Agenda</a><a class="menu-option" href="#">Publica</a></ul>
     <div class="container-fluid carouselContainer">
       <div class="row">
         <div class="col-12 col-sm-12 col-md-9">
@@ -37,8 +37,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active"><img class="d-block w-100" src="./src/public/images/students.jpg" alt="First slide"/>
                 <div class="carousel-caption d-md-block" class="">
-                  <h6>Pensando en ti,concentramos en una sola plataforma los eventos academicos que te ayudarán a crecer profesionalmente.</h6>
-                  <h6>A travez de nuestros eventos, adquiere las habilidades blandas que necesitas para ser un profesional competitivo en el mercado</h6>
+                  <h6>Conoce los eventos academicos que te ayudarán a crecer profesionalmente, en ellos adquiere las habilidades que necesitas para ser un profesional competitivo en el mercado</h6>
                 </div>
               </div>
               <div class="carousel-item"><img class="d-block w-100" src="./src/public/images/events/taller-marketing.jpg" alt="Second slide"/></div>
