--- a/src/public/events.html
+++ b/src/public/events.html
@@ -17,7 +17,7 @@
     <title>Inicio</title>
   </head>
   <body>
-    <header class="fixed-top"><a href="../../../index.html"><img class="logoWolap" src="images/koala.png" alt="koala"/></a><a href="../../../index.html">
+    <header class="fixed-top"><a href="../../../index.html"><img class="logoWolap" src="images/koala.png" alt="koala"/></a><a href="../../../index.htmlindex.html">
         <h1 class="logo">WOLAPP</h1></a>
       <ul><a class="menu-option" href="events.html">Eventos</a><a class="menu-option" href="#">Bolsa de trabajo</a><a class="menu-option" href="#">Agenda</a><a class="menu-option" href="#">Publicar</a></ul>
       <div>
@@ -41,31 +41,31 @@
         <div class="col-12 col-sm-5 col-md-5 col-lg-3" id="carEvent">
           <div class="row no-gutters">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12"><img class="imgEvent" src="./images/events/lora-iota.jpg" alt="img1" data-toggle="modal" data-target="#iota-lora"/></div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Jueves 22 de marzo (19:00 a 21:00)</span><span>Aforo: 10</span></div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>LORA e IOTA: tecnologías abiertas para las Smart Cities 4.0</span><span>Jueves 22 de marzo (19:00 a 21:00)</span></div>
           </div>
         </div>
         <div class="col-12 col-sm-5 col-md-5 col-lg-3" id="carEvent">
           <div class="row no-gutters">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12"><img class="imgEvent" src="./images/events/Herramientas-Marketing.jpg" alt="img1" data-toggle="modal" data-target="#herramientas-marketing"/></div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span><span>Aforo: 10</span></div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span></div>
           </div>
         </div>
         <div class="col-12 col-sm-5 col-md-5 col-lg-3" id="carEvent">
           <div class="row no-gutters">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12"><img class="imgEvent" src="./images/events/space-up.jpg" alt="img1" data-toggle="modal" data-target="#space-up"/></div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span><span>Aforo: 10</span></div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span></div>
           </div>
         </div>
         <div class="col-12 col-sm-5 col-md-5 col-lg-3" id="carEvent">
           <div class="row no-gutters">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12"><img class="imgEvent" src="./images/events/conegp.jpg" alt="img1" data-toggle="modal" data-target="#conegp"/></div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span><span>Aforo: 10</span></div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span></div>
           </div>
         </div>
         <div class="col-12 col-sm-5 col-md-5 col-lg-3" id="carEvent">
           <div class="row no-gutters">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12"><img class="imgEvent" src="./images/events/maraton-innovatec.jpg" alt="img1" data-toggle="modal" data-target="#maraton-innovatec"/></div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span><span>Aforo: 10</span></div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span></div>
           </div>
         </div>
       </div>
@@ -73,37 +73,37 @@
         <div class="col-12 col-sm-5 col-md-5 col-lg-3" id="carEvent">
           <div class="row no-gutters">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12"><img class="imgEvent" src="./images/events/curso-electricidad-industrial.jpg" alt="img1" data-toggle="modal" data-target="#exampleModal"/></div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span><span>Aforo: 10</span></div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span></div>
           </div>
         </div>
         <div class="col-12 col-sm-5 col-md-5 col-lg-3" id="carEvent">
           <div class="row no-gutters">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12"><img class="imgEvent" src="./images/events/iot.jpg" alt="img1" data-toggle="modal" data-target="#exampleModal"/></div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span><span>Aforo: 10</span></div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span></div>
           </div>
         </div>
         <div class="col-12 col-sm-5 col-md-5 col-lg-3" id="carEvent">
           <div class="row no-gutters">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12"><img class="imgEvent" src="./images/events/taller-marketing.jpg" alt="img1" data-toggle="modal" data-target="#exampleModal"/></div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span><span>Aforo: 10</span></div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span></div>
           </div>
         </div>
         <div class="col-12 col-sm-5 col-md-5 col-lg-3" id="carEvent">
           <div class="row no-gutters">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12"><img class="imgEvent" src="./images/events/ideas-estudios-mercado.jpg" alt="img1" data-toggle="modal" data-target="#exampleModal"/></div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span><span>Aforo: 10</span></div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span></div>
           </div>
         </div>
         <div class="col-12 col-sm-5 col-md-5 col-lg-3" id="carEvent">
           <div class="row no-gutters">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12"><img class="imgEvent" src="./images/events/Constructora-exito.jpg" alt="img1" data-toggle="modal" data-target="#exampleModal"/></div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span><span>Aforo: 10</span></div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12"><img class="imgEvent" src="./images/events/cdg-lima.jpg" alt="img1" data-toggle="modal" data-target="#exampleModal"/></div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span></div>
           </div>
         </div>
         <div class="col-12 col-sm-5 col-md-5 col-lg-3" id="carEvent">
           <div class="row no-gutters">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12"><img class="imgEvent" src="./images/events/IV-encuentro-Investigacion.jpg" alt="img1" data-toggle="modal" data-target="#exampleModal"/></div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span><span>Aforo: 10</span></div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12"><img class="imgEvent" src="./images/events/wit-marzo-meetup.jpg" alt="img1" data-toggle="modal" data-target="#exampleModal"/></div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 informationCardsEvents"><span>Itil Foundation - Preparación</span><span>Dom 25/Feb/18 - 4pm</span></div>
           </div>
         </div>
       </div>
@@ -121,10 +121,10 @@
                 <div class="col-12"><img class="img-fluid" src="./images/events/Arduino-Day.jpg" alt="img1"/></div>
               </div>
               <div class="row"><i class="material-icons" id="iconBlack">event</i>
-                <p id="informationEvent">Sab 07/Abril/18 - </p>
+                <p id="informationEvent">sábado, 7 de abril</p>
               </div>
               <div class="row"><i class="material-icons" id="iconBlack">watch_later</i>
-                <p id="informationEvent">( 9am-17:00 )</p>
+                <p id="informationEvent">( 9:00 a 17:00 )</p>
               </div>
               <div class="row"><i class="material-icons" id="iconBlack">attach_money</i>
                 <p id="informationEvent">Gratis</p>
@@ -135,17 +135,11 @@
               <div class="row">
                 <div class="col-12">
                   <ol> 
-                    <li class="text-justify">Este 22 de marzo se realizará la conferencia “LORA e IOTA: tecnologías abiertas para el              desarrollo de Smart Cities e Industria 4.0” gracias al Núcleo de Investigación e Innovación Tecnológica (NIIT)    de   Internet de las Cosas de la Universidad Nacional Mayor de San Marcos. </li>
-                    <li>El grupo está dirigido por el profesor Jorge Guerra.</li>
-                    <li>Inscripciones ➡ https://goo.gl/CWbi3V</li>
+                    <li class="text-justify">Evento mundial que celebra el desarrollo de soluciones tecnologicas en Open Hardware. La tecnologia Arduino es la lider indiscutible en implementar aplicaciones Hardware y Software. En el Peru la sede del evento mundial es la Universidad Nacional Mayor de San Marcos y esa organizado por el grupo de investigacion de Internet de las Cosas.   </li>
                     <li>Ingreso gratuito, capacidad limitada.</li>
-                    <li>Programa de actividades : <a href="https://www.facebook.com/events/1529278423849405/">https://www.facebook.com/events/1529278423849405/</a></li>
+                    <li> <a href="https://goo.gl/forms/zAOOE2GeMtZPWnrf1">https://goo.gl/forms/zAOOE2GeMtZPWnrf1https://www.facebook.com/events/1529278423849405/</a></li>
                   </ol>
                 </div>
-              </div>
-              <div class="row">
-                <div class="col-12"></div>
-                <div class="text-center" id="map"></div>
               </div>
             </div>
           </div>
@@ -159,19 +153,60 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Arduino Day 2018</h5>
+            <h5 class="modal-title" id="exampleModalLabel">LORA e IOTA: tecnologías abiertas para las Smart Cities 4.0</h5>
             <button class="close" type="button" data-dismiss="modal" aria-label="Close"></button><span aria-hidden="true">&times;</span>
           </div>
           <div class="modal-body">
             <div class="container-fluid">
               <div class="row">
-                <div class="col-12"><img class="img-fluid" src="./images/events/Arduino-Day.jpg" alt="img1"/></div>
+                <div class="col-12"><img class="img-fluid" src="./images/events/lora-iota.jpg" alt="img1"/></div>
               </div>
               <div class="row"><i class="material-icons" id="iconBlack">event</i>
-                <p id="informationEvent">Sab 07/Abril/18 - </p>
+                <p id="informationEvent">Jueves 22 de marzo  </p>
               </div>
               <div class="row"><i class="material-icons" id="iconBlack">watch_later</i>
-                <p id="informationEvent">( 9am-17:00 )</p>
+                <p id="informationEvent">(19:00 a 21:00)</p>
+              </div>
+              <div class="row"><i class="material-icons" id="iconBlack">attach_money</i>
+                <p id="informationEvent">Gratis</p>
+              </div>
+              <div class="row"><i class="material-icons" id="iconBlack">pin_drop</i>
+                <p id="informationEvent">Cultura en San Isidro, Calle La Republica 455, Lima 27 Lima</p>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <ol> 
+                    <li class="text-justify">Este 22 de marzo se realizará la conferencia “LORA e IOTA: tecnologías abiertas para el              desarrollo de Smart Cities e Industria 4.0” gracias al Núcleo de Investigación e Innovación Tecnológica (NIIT)    de   Internet de las Cosas de la Universidad Nacional Mayor de San Marcos. </li>
+                    <li>El grupo está dirigido por el profesor Jorge Guerra.</li>
+                    <li>Inscripciones ➡ <a href="https://goo.gl/CWbi3V">https://goo.gl/CWbi3V</a></li>
+                    <li>Ingreso gratuito, capacidad limitada.</li>
+                    <li>Programa de actividades : <a href="https://www.facebook.com/events/1209571855840436/">https://www.facebook.com/events/1209571855840436/</a></li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+            <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="herramientas-marketing" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Taller Herramientas de Marketing para la Innovación</h5>
+            <button class="close" type="button" data-dismiss="modal" aria-label="Close"></button><span aria-hidden="true">&times;</span>
+          </div>
+          <div class="modal-body">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-12"><img class="img-fluid" src="./images/events/Herramientas-Marketing.jpg" alt="img1"/></div>
+              </div>
+              <div class="row"><i class="material-icons" id="iconBlack">event</i>
+                <p id="informationEvent">sábado, 7 de abril</p>
+              </div>
+              <div class="row"><i class="material-icons" id="iconBlack">watch_later</i>
+                <p id="informationEvent">( 9:00 a 17:00 )</p>
               </div>
               <div class="row"><i class="material-icons" id="iconBlack">attach_money</i>
                 <p id="informationEvent">Gratis</p>
@@ -182,17 +217,11 @@
               <div class="row">
                 <div class="col-12">
                   <ol> 
-                    <li class="text-justify">Este 22 de marzo se realizará la conferencia “LORA e IOTA: tecnologías abiertas para el              desarrollo de Smart Cities e Industria 4.0” gracias al Núcleo de Investigación e Innovación Tecnológica (NIIT)    de   Internet de las Cosas de la Universidad Nacional Mayor de San Marcos. </li>
-                    <li>El grupo está dirigido por el profesor Jorge Guerra.</li>
-                    <li>Inscripciones ➡ https://goo.gl/CWbi3V</li>
+                    <li class="text-justify">Evento mundial que celebra el desarrollo de soluciones tecnologicas en Open Hardware. La tecnologia Arduino es la lider indiscutible en implementar aplicaciones Hardware y Software. En el Peru la sede del evento mundial es la Universidad Nacional Mayor de San Marcos y esa organizado por el grupo de investigacion de Internet de las Cosas.   </li>
                     <li>Ingreso gratuito, capacidad limitada.</li>
-                    <li>Programa de actividades : <a href="https://www.facebook.com/events/1529278423849405/">https://www.facebook.com/events/1529278423849405/</a></li>
+                    <li> <a href="https://goo.gl/forms/zAOOE2GeMtZPWnrf1">https://goo.gl/forms/zAOOE2GeMtZPWnrf1https://www.facebook.com/events/1529278423849405/</a></li>
                   </ol>
                 </div>
-              </div>
-              <div class="row">
-                <div class="col-12"></div>
-                <div class="text-center" id="map"></div>
               </div>
             </div>
           </div>
