--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
               <li class="active" data-target="#carouselExampleIndicators" data-slide-to="0"></li>
               <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
               <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active"><img class="d-block w-100" src="./src/public/images/students.jpg" alt="First slide"/>
