colors header and menu options

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Inicio</title>
   </head>
   <body>
-    <header class="fixed-top"><a href="index.html"><img class="logoWolap" src="./src/public/images/koala.png" alt="koala"/></a><a href="index.html">
+    <header class="fixed-top"><a href="../../../index.html"><img class="logoWolap" src="./src/public/images/koala.png" alt="koala"/></a><a href="../../../index.htmlindex.html">
         <h1 class="logo">WOLAPP</h1></a>
       <ul><a class="menu-option" href="./src/public/events.html">Eventos</a><a class="menu-option" href="#">Bolsa de trabajo</a><a class="menu-option" href="#">Agenda</a><a class="menu-option" href="#">Publicar</a></ul>
       <div>
@@ -37,24 +37,146 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active"><img class="d-block w-100" src="./src/public/images/students.jpg" alt="First slide"/>
-                <div class="carousel-caption d-md-block" class="">
-                  <h6>Conoce los eventos academicos que te ayudarán a crecer profesionalmente, en ellos adquiere las habilidades que necesitas para ser un profesional competitivo en el mercado</h6>
+                <div class="carousel-caption d-md-block">
+                  <h6>Conoce los eventos academicos que te ayudarán a crecer profesionalmente, en ellos adquiere las habilidades que necesitas para ser un profesional competitivo en el mercado.</h6>
                 </div>
               </div>
               <div class="carousel-item"><img class="d-block w-100" src="./src/public/images/events/taller-marketing.jpg" alt="Second slide"/></div>
               <div class="carousel-item"><img class="d-block w-100" src="./src/public/images/events/lora-iota.jpg" alt="Third slide"/></div>
-              <div class="carousel-item"><img class="d-block w-100" src="./src/public/images/events/space-up.jpg" alt="Fifth slide"/></div>
+              <div class="carousel-item"><img class="d-block w-100" src="./src/public/images/events/cdg-lima.jpg" alt="fourth slide"/></div>
             </div><a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next"><span class="carousel-center-next-icon" aria-hidden="true"></span><span class="sr-only">Next</span></a>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-3">
-          <div class="row"><img class="img-article" src="./src/public/images/events/Arduino-Day.jpg" alt="img1" data-toggle="modal" data-target="#exampleModal"/></div>
-          <div class="row"><img class="img-article" src="./src/public/images/events/ideas-estudios-mercado.jpg" alt="img1"/></div>
-          <div class="row"><img class="img-article" src="./src/public/images/events/conegp.jpg" alt="img1"/></div>
+          <div class="row"><img class="img-article" src="./src/public/images/events/Arduino-Day.jpg" alt="img1" data-toggle="modal" data-target="#arduino"/></div>
+          <div class="row"><img class="img-article" src="./src/public/images/events/conegp.jpg" ,="," data-toggle="modal" data-target="#conegp"/></div>
+          <div class="row"><img class="img-article" src="./src/public/images/events/ideas-estudios-mercado.jpg" ,="," data-toggle="modal" data-target="#ideas-estudios-mercado"/></div>
         </div>
       </div>
     </div>
-    <footer class="row"><span class="mx-auto">Todos los derechos reservados FindUs</span></footer>
+    <div class="modal fade" id="arduino" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Arduino Day 2018</h5>
+            <button class="close" type="button" data-dismiss="modal" aria-label="Close"></button><span aria-hidden="true">&times;</span>
+          </div>
+          <div class="modal-body">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-12"><img class="img-fluid" src="./src/public/images/events/Arduino-Day.jpg" alt="img1"/></div>
+              </div>
+              <div class="row"><i class="material-icons" id="iconBlack">event</i>
+                <p id="informationEvent">sábado, 7 de abril</p>
+              </div>
+              <div class="row"><i class="material-icons" id="iconBlack">watch_later</i>
+                <p id="informationEvent">( 9:00 a 17:00 )</p>
+              </div>
+              <div class="row"><i class="material-icons" id="iconBlack">attach_money</i>
+                <p id="informationEvent">Gratis</p>
+              </div>
+              <div class="row"><i class="material-icons" id="iconBlack">pin_drop</i>
+                <p id="informationEvent">Auditorio Rosa Alarco Larrabure - UNMSM</p>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <ol> 
+                    <li class="text-justify">Evento mundial que celebra el desarrollo de soluciones tecnologicas en Open Hardware. La tecnologia Arduino es la lider indiscutible en implementar aplicaciones Hardware y Software. En el Peru la sede del evento mundial es la Universidad Nacional Mayor de San Marcos y esa organizado por el grupo de investigacion de Internet de las Cosas.   </li>
+                    <li>Ingreso gratuito, capacidad limitada.</li>
+                    <li> <a href="https://goo.gl/forms/zAOOE2GeMtZPWnrf1">https://goo.gl/forms/zAOOE2GeMtZPWnrf1https://www.facebook.com/events/1529278423849405/</a></li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="conegp" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Congreso Nacional Estudiantil de Gestión de Proyectos (CONEGP)</h5>
+            <button class="close" type="button" data-dismiss="modal" aria-label="Close"></button><span aria-hidden="true">&times;</span>
+          </div>
+          <div class="modal-body">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-12"><img class="img-fluid" src="./src/public/images/events/conegp.jpg" alt="img1"/></div>
+              </div>
+              <div class="row"><i class="material-icons" id="iconBlack">event</i>
+                <p id="informationEvent"> 15 - 18 de agosto</p>
+              </div>
+              <div class="row"><i class="material-icons" id="iconBlack">watch_later</i>
+                <p id="informationEvent"> 9:00 (15 de agosto) - 21:00 (18 de agosto) </p>
+              </div>
+              <div class="row"><i class="material-icons" id="iconBlack">attach_money</i>
+                <p id="informationEvent">Gratis</p>
+              </div>
+              <div class="row"><i class="material-icons" id="iconBlack">pin_drop</i>
+                <p id="informationEvent">Avenida Juan Pablo II 306, 07011 Bellavista, Perú</p>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <ol> 
+                    <li class="text-justify">Somos un equipo de estudiantes que promueve el desarrollo del CONEGP; un evento académico importante que brinda herramientas, habilidades blandas y el uso de la tecnología como brazo estratégico en la formación integral de la Dirección de Proyectos.   </li>
+                    <li>Ingreso gratuito.</li>
+                    <li> <a href="https://www.facebook.com/events/1860995150577735/"> https://www.facebook.com/events/1860995150577735/</a></li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="ideas-estudios-mercado" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Ideas y Estudio de Mercado</h5>
+            <button class="close" type="button" data-dismiss="modal" aria-label="Close"></button><span aria-hidden="true">&times;</span>
+          </div>
+          <div class="modal-body">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-12"><img class="img-fluid" src="./src/public/images/events/ideas-estudios-mercado.jpg" alt="img1"/></div>
+              </div>
+              <div class="row"><i class="material-icons" id="iconBlack">event</i>
+                <p id="informationEvent">4 y 7 de Abril</p>
+              </div>
+              <div class="row"><i class="material-icons" id="iconBlack">watch_later</i>
+                <p id="informationEvent">04 de Abril ( 7:00 p.m. - 10:00 p.m.) /07 de Abril ( 10:00 a.m. - 2:00 p.m.)</p>
+              </div>
+              <div class="row"><i class="material-icons" id="iconBlack">attach_money</i>
+                <p id="informationEvent">Gratis</p>
+              </div>
+              <div class="row"><i class="material-icons" id="iconBlack">pin_drop</i>
+                <p id="informationEvent">Av Javier Prado este 3502, piso 1 - San Borja</p>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <ol> 
+                    <li class="text-justify">Esta semana te invitamos a matricularte en un nuevo inicio de nuestro CURSO INTEGRAL MIEMPRESAPROPIA, que por más de 12 años ha capacitado a más de 6,700 nuevos emprendedores.</li>
+                    <li> Capacidad limitada. <a href="https://www.facebook.com/events/2073558702900792/"> https://www.facebook.com/events/2073558702900792/   </a></li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-secondary" type="button" data-dismiss="modal">Close </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="row"><span class="mx-auto">© Copyright 2018  Brenda Mesias Villar. Todos los derechos reservados.</span></footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
