--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <title>Inicio</title>
   </head>
   <body>
-    <header class="fixed-top"><a href="../../../index.html"><img class="logoWolap" src="./src/public/images/koala.png" alt="koala"/></a><a href="../../../index.htmlindex.html">
+    <header class="fixed-top"><a href="../../../index.html"><img class="logoWolap" src="./src/public/images/koala.png" alt="koala"/></a><a href="./index.html">
         <h1 class="logo">WOLAPP</h1></a>
       <ul><a class="menu-option" href="./src/public/events.html">Eventos</a><a class="menu-option" href="#">Bolsa de trabajo</a><a class="menu-option" href="#">Agenda</a><a class="menu-option" href="#">Publicar</a></ul>
       <div>
-        <input class="search" type="text" placeholder="Buscar..."/><a href="#"><i class="material-icons">account_circle</i></a>
+        <input class="search" type="text" placeholder="busca tu evento"/><a href="#"><i class="material-icons">account_circle</i></a>
       </div>
     </header>
     <ul class="menu-options fixed-top nav-options"><a class="menu-option" href="./src/public/events.html">Eventos</a><a class="menu-option" href="#">Bolsa de trabajo</a><a class="menu-option" href="#">Agenda</a><a class="menu-option" href="#">Publica</a></ul>
@@ -42,15 +42,15 @@
                 </div>
               </div>
               <div class="carousel-item"><img class="d-block w-100" src="./src/public/images/events/taller-marketing.jpg" alt="Second slide"/></div>
-              <div class="carousel-item"><img class="d-block w-100" src="./src/public/images/events/lora-iota.jpg" alt="Third slide"/></div>
-              <div class="carousel-item"><img class="d-block w-100" src="./src/public/images/events/cdg-lima.jpg" alt="fourth slide"/></div>
+              <div class="carousel-item"><img class="d-block w-100" src="./src/public/images/events/sem-iot.jpg" alt="Third slide"/></div>
+              <div class="carousel-item"><img class="d-block w-100" src="./src/public/images/events/tall-coaching.jpg" alt="fourth slide"/></div>
             </div><a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next"><span class="carousel-center-next-icon" aria-hidden="true"></span><span class="sr-only">Next</span></a>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-3">
           <div class="row"><img class="img-article" src="./src/public/images/events/Arduino-Day.jpg" alt="img1" data-toggle="modal" data-target="#arduino"/></div>
-          <div class="row"><img class="img-article" src="./src/public/images/events/conegp.jpg" ,="," data-toggle="modal" data-target="#conegp"/></div>
-          <div class="row"><img class="img-article" src="./src/public/images/events/ideas-estudios-mercado.jpg" ,="," data-toggle="modal" data-target="#ideas-estudios-mercado"/></div>
+          <div class="row"><img class="img-article" src="./src/public/images/events/conegp.jpg" ="" data-toggle="modal" data-target="#conegp"/></div>
+          <div class="row"><img class="img-article" src="./src/public/images/events/ideas-estudios-mercado.jpg" ="" data-toggle="modal" data-target="#ideas-estudios-mercado"/></div>
         </div>
       </div>
     </div>
